@@ -234,7 +234,9 @@ public class HConnectionManager implements HConstants {
     }
 
     /** {@inheritDoc} */
-    public boolean tableExists(final byte [] tableName) {
+    public boolean tableExists(final byte [] tableName)
+    throws MasterNotRunningException {
+      getMaster();
       if (tableName == null) {
         throw new IllegalArgumentException("Table name cannot be null");
       }
@@ -269,12 +271,15 @@ public class HConnectionManager implements HConstants {
     public HRegionLocation getRegionLocation(final byte [] name,
         final byte [] row, boolean reload)
     throws IOException {
+      getMaster();
       return reload? relocateRegion(name, row): locateRegion(name, row);
     }
 
     /** {@inheritDoc} */
     public HTableDescriptor[] listTables() throws IOException {
-      final HashSet<HTableDescriptor> uniqueTables = new HashSet<HTableDescriptor>();
+      getMaster();
+      final HashSet<HTableDescriptor> uniqueTables =
+        new HashSet<HTableDescriptor>();
 
       MetaScannerVisitor visitor = new MetaScannerVisitor() {
 
@@ -297,44 +302,132 @@ public class HConnectionManager implements HConstants {
       return uniqueTables.toArray(new HTableDescriptor[uniqueTables.size()]);
     }
 
-    /**
-     * @param tableName
-     * @return table metadata 
-     * @throws IOException
-     */
+    /** {@inheritDoc} */
+    public boolean isTableEnabled(byte[] tableName) throws IOException {
+      if (!tableExists(tableName)) {
+        throw new TableNotFoundException(Bytes.toString(tableName));
+      }
+      if (Bytes.equals(tableName, HConstants.ROOT_TABLE_NAME)) {
+        // The root region is always enabled
+        return true;
+      }
+      
+      boolean result = true;
+      int rowsScanned = 0;
+      byte[] startKey =
+        HRegionInfo.createRegionName(tableName, null, HConstants.ZEROES);
+      HRegionInfo currentRegion = null;
+      do {
+        if (currentRegion != null) {
+          byte[] endKey = currentRegion.getEndKey();
+          if (endKey == null ||
+              Bytes.equals(endKey, HConstants.EMPTY_BYTE_ARRAY)) {
+            // We have reached the end of the table and we're done
+            break;
+          }
+        }
+        HRegionInfo oldRegion = currentRegion;
+        if (oldRegion != null) {
+          startKey = oldRegion.getEndKey();
+        }
+        ScannerCallable s = new ScannerCallable(this, 
+            (Bytes.equals(tableName, HConstants.META_TABLE_NAME) ?
+                HConstants.ROOT_TABLE_NAME : HConstants.META_TABLE_NAME),
+            HConstants.COL_REGIONINFO_ARRAY, startKey,
+            HConstants.LATEST_TIMESTAMP, null
+        );
+        // Open scanner
+        getRegionServerWithRetries(s);
+        currentRegion = s.getHRegionInfo();
+        try {
+          RowResult r = null;
+          while (result && (r = getRegionServerWithRetries(s)) != null) {
+            Cell c = r.get(HConstants.COL_REGIONINFO);
+            if (c != null) {
+              byte[] value = c.getValue();
+              if (value != null) {
+                HRegionInfo info = Writables.getHRegionInfoOrNull(value);
+                if (info != null) {
+                  if (Bytes.equals(info.getTableDesc().getName(), tableName)) {
+                    rowsScanned += 1;
+                    result = !info.isOffline();
+                  }
+                }
+              }
+            }
+          }
+        } finally {
+          s.setClose();
+          getRegionServerWithRetries(s);
+        }
+      } while (result);
+      return rowsScanned > 0 && result;
+    }
+    
+    /** {@inheritDoc} */
     public HTableDescriptor getHTableDescriptor(byte[] tableName)
     throws IOException {
       if (Bytes.equals(tableName, HConstants.ROOT_TABLE_NAME)) {
         return new UnmodifyableHTableDescriptor(HTableDescriptor.ROOT_TABLEDESC);
       }
-      HTable meta = new HTable(conf,
-          Bytes.equals(tableName, HConstants.META_TABLE_NAME) ?
-              HConstants.ROOT_TABLE_NAME : HConstants.META_TABLE_NAME);
-      Scanner s = meta.getScanner(HConstants.COL_REGIONINFO_ARRAY,
-          HRegionInfo.createRegionName(tableName, null, HConstants.ZEROES));
-      try {
-        RowResult r = null;
-        while ((r = s.next()) != null) {
-          Cell c = r.get(HConstants.COL_REGIONINFO);
-          if (c != null) {
-            HRegionInfo info = Writables.getHRegionInfoOrNull(c.getValue());
-            if (info != null) {
-              if (Bytes.equals(info.getTableDesc().getName(), tableName)) {
-                return new UnmodifyableHTableDescriptor(info.getTableDesc());
+      if (!tableExists(tableName)) {
+        throw new TableNotFoundException(Bytes.toString(tableName));
+      }
+      byte[] startKey =
+        HRegionInfo.createRegionName(tableName, null, HConstants.ZEROES);
+      
+      HTableDescriptor result = null;
+      HRegionInfo currentRegion = null;
+      ScannerCallable s = null;
+      while (result == null) {
+        if (currentRegion != null) {
+          byte[] endKey = currentRegion.getEndKey();
+          if (endKey == null ||
+              Bytes.equals(endKey, HConstants.EMPTY_BYTE_ARRAY)) {
+            // We have reached the end of the table and we're done
+            break;
+          }
+        }
+        HRegionInfo oldRegion = currentRegion;
+        if (oldRegion != null) {
+          startKey = oldRegion.getEndKey();
+        }
+        s = new ScannerCallable(this, 
+            (Bytes.equals(tableName, HConstants.META_TABLE_NAME) ?
+                HConstants.ROOT_TABLE_NAME : HConstants.META_TABLE_NAME),
+            HConstants.COL_REGIONINFO_ARRAY, startKey,
+            HConstants.LATEST_TIMESTAMP, null
+        );
+        // Open scanner
+        getRegionServerWithRetries(s);
+        currentRegion = s.getHRegionInfo();
+        try {
+          RowResult r = null;
+          while ((r = getRegionServerWithRetries(s)) != null) {
+            Cell c = r.get(HConstants.COL_REGIONINFO);
+            if (c != null) {
+              HRegionInfo info = Writables.getHRegionInfoOrNull(c.getValue());
+              if (info != null) {
+                if (Bytes.equals(info.getTableDesc().getName(), tableName)) {
+                  result = new UnmodifyableHTableDescriptor(info.getTableDesc());
+                  break;
+                }
               }
             }
           }
+        } finally {
+          s.setClose();
+          getRegionServerWithRetries(s);
         }
-        return null;
-      } finally {
-        s.close();
       }
+      return result;
     }
 
     /** {@inheritDoc} */
     public HRegionLocation locateRegion(final byte [] tableName,
         final byte [] row)
     throws IOException{
+      getMaster();
       return locateRegion(tableName, row, true);
     }
 
@@ -342,6 +435,7 @@ public class HConnectionManager implements HConstants {
     public HRegionLocation relocateRegion(final byte [] tableName,
         final byte [] row)
     throws IOException{
+      getMaster();
       return locateRegion(tableName, row, false);
     }
 
@@ -644,6 +738,7 @@ public class HConnectionManager implements HConstants {
     /** {@inheritDoc} */
     public HRegionInterface getHRegionConnection(HServerAddress regionServer) 
     throws IOException {
+      getMaster();
       HRegionInterface server;
       synchronized (this.servers) {
         // See if we already have a connection
@@ -768,6 +863,7 @@ public class HConnectionManager implements HConstants {
     /** {@inheritDoc} */
     public <T> T getRegionServerWithRetries(ServerCallable<T> callable) 
     throws IOException, RuntimeException {
+      getMaster();
       List<Throwable> exceptions = new ArrayList<Throwable>();
       for(int tries = 0; tries < numRetries; tries++) {
         try {
